--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -67,8 +67,9 @@ html {
 }
 
 body {
-  font-family: 'San Francisco', 'Helvetica Neue', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑',
-    Arial, sans-serif;
+  font-family: 'monako', 'Microsoft YaHei', 'Wenquanyi Micro Hei', 'WenQuanYi Micro Hei Mono', 'Droid Sans Fallback',
+    'WenQuanYi Zen Hei', 'WenQuanYi Zen Hei', 'Apple LiGothic Medium', SimHei, 'ST Heiti', 'WenQuanYi Zen Hei Sharp',
+    Sans;
   font-size: 12px;
 }
 
