--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -158,3 +158,8 @@ input:-ms-input-placeholder {
   color: #fff;
   font-size: 30px;
 }
+
+@font-face {
+  font-family: 'monako';
+  src: url('./fonts/monako.ttf') format('truetype');
+}
