--- a/src/styles/article.less
+++ b/src/styles/article.less
@@ -141,3 +141,18 @@
   padding: 2px 7px;
   vertical-align: text-top;
 }
+
+@media (max-width: 650px) {
+  html {
+    font-size: 14px;
+  }
+  .article__content > p,
+  .article__content > ul,
+  .article__content > ol,
+  .article__content > pre,
+  .article__content > table,
+  .article__content > blockquote {
+    font-size: 13px;
+    margin: 0 0 10px 0;
+  }
+}
