--- a/src/styles/article.less
+++ b/src/styles/article.less
@@ -12,6 +12,8 @@
   }
   code {
     padding: 20px;
+    white-space: pre-wrap;
+    word-break: normal;
   }
 }
 
@@ -117,6 +119,12 @@
 .article__content ul {
   padding-left: 2rem;
   list-style-type: disc;
+  li{
+    list-style-type: disc;
+    ul,li{
+      list-style-type: circle;
+    }
+  }
 }
 
 .article__content ol {
@@ -141,7 +149,6 @@
   padding: 2px 7px;
   vertical-align: text-top;
 }
-
 @media (max-width: 650px) {
   html {
     font-size: 14px;
